--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }],
     "require": {
         "php": ">=5.5.0",
-        "slim/slim": "3.*",
+        "slim/slim": "~3.1",
         "monolog/monolog": "^1.17",
         "oscarotero/psr7-middlewares": "^3.8",
         "tedivm/stash": "^0.13.1"
@@ -24,7 +24,7 @@
         "test": "codecept run",
         "cs": "phpcs --standard=PSR2 src/",
         "cbf": "phpcbf --standard=PSR2 src/",
-        "serve": "php -S 0.0.0.0:8888 -t ../public ../public/index.php",
+        "serve": "php -S 0.0.0.0:3000 -t public/ public/index.php",
         "post-create-project-cmd": "php -r \"copy('config.example.php', 'config.php');\"",
         "bootstrap": "@post-create-project-cmd"
     },
